Replaces home map and fixes general alignment of first columns

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -52,7 +52,7 @@
     margin-left: 2%; }
   .column:first-child,
   .columns:first-child {
-    margin-left: 0; }
+    margin-left: 2%; }
 
   .one.column,
   .one.columns                    { width: 4.66666666667%; }
